<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimension20dp">
    <LinearLayout
        android:id="@+id/llLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimension5dp"

        >
    <ImageView
        android:layout_width="@dimen/dimension40dp"
        android:layout_height="@dimen/dimension40dp"
        android:src="@drawable/ic_logout"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/dimension20dp"
        android:textSize="@dimen/dimension25dp"
        android:textColor="@color/colorBlack"
        android:text="@string/logout"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtalert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimension10dp"
        android:layout_below="@+id/llLogout"
        android:textSize="@dimen/dimension20dp"
        android:textColor="@color/colorBlack"
        android:text="@string/alertlogout"/>
    <LinearLayout
        android:layout_below="@+id/txtalert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="@dimen/dimension20dp"
        android:layout_marginTop="@dimen/dimension20dp"

        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="@dimen/dimension20dp"
            android:textColor="@color/red"
            android:layout_marginRight="@dimen/dimension30dp"


            />
        <TextView
            android:id="@+id/txtYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="@dimen/dimension20dp"

            android:textColor="@color/colorGreen"

            />


    </LinearLayout>


</RelativeLayout>