<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.quagnitia.messaging_app.Activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">


        <RelativeLayout
            android:id="@+id/rlMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginBottom="@dimen/dimension50dp"
                    android:layout_marginTop="@dimen/dimension50dp"

                    android:src="@drawable/logo3" />

                <LinearLayout
                    android:id="@+id/lluser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="@dimen/dimension25dp"
                    android:layout_marginRight="@dimen/dimension25dp"
                    android:background="@drawable/login_border"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/left_corner"
                            android:padding="@dimen/dimension25dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_user"
                                android:tint="@color/colorWhite" />
                        </LinearLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/etEmailLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:descendantFocusability="beforeDescendants"
                            android:focusableInTouchMode="true"
                            android:textColorHint="@color/Gray"
                            app:hintEnabled="true"
                            app:passwordToggleEnabled="false">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/etEmail"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/dimension5dp"
                                android:layout_marginRight="@dimen/dimension5dp"
                                android:background="@android:color/transparent"
                                android:hint="@string/userName"
                                android:paddingTop="8dp"
                                android:singleLine="true"
                                android:textColor="@color/colorWhite">

                                <requestFocus />
                            </android.support.design.widget.TextInputEditText>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimension1dp"
                        android:background="@color/colorWhite">

                    </View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"

                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:background="@drawable/left_bottom"
                            android:padding="@dimen/dimension25dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_locked"
                                android:tint="@color/colorWhite" />
                        </LinearLayout>


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/etPasswordLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:descendantFocusability="beforeDescendants"
                            android:textColorHint="@color/Gray"
                            app:hintEnabled="true"
                            app:passwordToggleEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/etPass"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/dimension5dp"
                                android:layout_marginRight="@dimen/dimension5dp"
                                android:background="@android:color/transparent"
                                android:hint="@string/password"
                                android:inputType="textPassword"

                                android:singleLine="true"
                                android:textColor="@color/colorWhite" />
                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lluser"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/dimension25dp"
                    android:layout_marginRight="@dimen/dimension25dp"
                    android:layout_marginTop="@dimen/dimension25dp"
                    android:background="@drawable/login_bor"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/dimension15dp"
                        android:text="@string/login"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/dimension22dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
            <!---->
            <TextView
                android:id="@+id/forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linn"
                android:layout_marginTop="@dimen/dimension50dp"
                android:layout_marginBottom="@dimen/dimension25dp"
                android:gravity="center_horizontal"
                android:text="@string/forget"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimension18dp"
                android:textStyle="bold" />


        </RelativeLayout>


    </RelativeLayout>
</ScrollView>